23871 Fixed word wrapping

--- a/BridgeCareApp/VuejsApp/src/assets/css/main.css
+++ b/BridgeCareApp/VuejsApp/src/assets/css/main.css
@@ -454,13 +454,12 @@ table.v-table tbody td input {
 
 .notification-long-message {
     display: inline-block;
-    min-inline-size: 90%;
+    max-width: 100%; 
     padding: 10pt;
-    margin: 10pt 10pt 10pt 10pt;
+    margin: 10pt;
     border-radius: 4pt;
     box-shadow: 0 3pt 5pt rgba(0, 0, 0, 0.25);
     font-size: 100%;
-    word-wrap: break-word;
 }
 
 .scenario-status {
